feat: add postgres migration file
