# internal/controller/http/v1/router.go
@@ -22,7 +22,7 @@ import (
 // @version     1.0
 // @host        localhost:8080
 // @BasePath    /v1
-func NewRouter(handler *gin.Engine, l logger.Interface, t usecase.Translation, a usecase.Auth) {
+func NewRouter(handler *gin.Engine, l logger.Interface, a usecase.Auth) {
 	// Options
 	handler.Use(gin.Logger())
 	handler.Use(gin.Recovery())
@@ -40,7 +40,6 @@ func NewRouter(handler *gin.Engine, l logger.Interface, t usecase.Translation, a
 	// Routers
 	h := handler.Group("/v1")
 	{
-		newTranslationRoutes(h, t, l)
 		newAuthRoutes(h, a, l)
 	}
 }
